--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TypeIO",
+  "name": "typeio",
   "version": "1.0.2",
   "description": "A custom multiselect UI widget based on twitter type ahead plugin",
   "main": "dist/typeio.js",
