--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "typeio",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A custom multiselect UI widget based on twitter type ahead plugin",
   "main": "dist/typeio.js",
   "scripts": {
-    "build:uglify": "npm run clean && npm run sass && npm run jshint && uglifyjs ./src/typeio.js > ./dist/typeio.min.js",
-    "build": "npm run clean && npm run sass && npm run jshint && cp ./src/typeio.js ./dist/typeio.js",
+    "build:uglify": "npm run clean && npm run test && npm run sass && npm run jshint && uglifyjs ./src/typeio.js > ./dist/typeio.min.js",
+    "build": "npm run clean && npm run test && npm run sass && npm run jshint && cp ./src/typeio.js ./dist/typeio.js",
     "clean": "./node_modules/rimraf/bin.js dist/* *.log* ",
     "browserify": "./node_modules/browserify/bin/cmd.js ./src/**/*.js | uglifyjs > ./dist/typeio.min.js",
     "browserify:debug": "./node_modules/browserify/bin/cmd.js --debug ./src/typeio.js -o ./dist/typeio.js",
