--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "typeio",
   "version": "1.0.8",
   "description": "A custom multiselect UI widget based on twitter type ahead plugin",
-  "main": "dist/typeio.js",
+  "main": "src/typeio.js",
   "scripts": {
-    "build:uglify": "npm run clean && npm run test && npm run sass && npm run jshint && uglifyjs ./src/typeio.js > ./dist/typeio.min.js",
-    "build": "npm run clean && npm run test && npm run sass && npm run jshint && cp ./src/typeio.js ./dist/typeio.js",
+    "build": "npm run clean && npm run test && npm run sass && npm run jshint && cp ./src/typeio.js ./dist/typeio.js && uglifyjs ./src/typeio.js > ./dist/typeio.min.js",
+    "browserify": "./node_modules/browserify/bin/cmd.js ./src/**.js > ./dist/typeio.min.js",
     "clean": "./node_modules/rimraf/bin.js dist/* *.log* ",
-    "browserify": "./node_modules/browserify/bin/cmd.js ./src/**/*.js | uglifyjs > ./dist/typeio.min.js",
-    "browserify:debug": "./node_modules/browserify/bin/cmd.js --debug ./src/typeio.js -o ./dist/typeio.js",
-    "sass": "mkdir -p dist/assets/styles && sass src/assets/styles/styles.scss dist/assets/styles/styles.css && rsync -a src/assets/ dist/assets/ --exclude styles",
+    "sass": "mkdir -p dist/assets/styles && sass src/assets/styles/typeio-styles.scss dist/assets/styles/typeio-styles.css",
     "jshint": "./node_modules/jshint/bin/jshint ./src/**",
     "test": "./node_modules/karma/bin/karma start ./karma.conf.js --singleRun=true"
   },
