--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/michr-cri/TypeIO"
+    "url": "https://github.com/umich-michr/TypeIO"
   }
 }
